Amanda: Fix horizontal scrolling on mobile
Fixed issue where the user could scroll horizontally when
the sidebar was opened.

TEST=manual
- Checked website to make sure sidebar was displayed correctly

--- a/js/src/personal/amanda/main/Main.module.css
+++ b/js/src/personal/amanda/main/Main.module.css
@@ -1,14 +1,11 @@
 .scrollArea {
   text-wrap: wrap;
   width: 100%;
-
-  @media (max-width: $mantine-breakpoint-md) {
-    padding-left: 0;
-  }
 }
 
 .section {
   padding-top: 5rem;
+  padding-left: 4rem;
 }
 
 .title {
